Background covers the whole page. Mobileview fixed. Content is centered.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Exo');
+html{
+    height: 100%;
+}
+.background {
+    background-image: url('../img/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 table {
     width: 100%;
     height: 100%;
@@ -18,41 +27,54 @@ td {
     border: 1px solid black;
 }
 
-.general-sub {
-    margin-bottom: 10px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    color: #000000;
-}
-
 form {
     margin: 20px;
 }
 
-html,
-body {
-    height: 90%;
+.general-sub {
+    margin-bottom: 10px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #000000;
+    font-weight: bold;
+}
+
+.nav-link {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.navbar-brand {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 .nav-link,
 .navbar-brand {
-    font-size: 20px;
-    font-weight: 400;
     color: black;
     text-decoration: none;
 }
 
-.navbar,
-.navbar-light{
-    color: white;
-    background-color: rgba(105, 105, 105);
+.bg-light {
+    background-color: rgba(105, 105, 105, 0.5) !important;
 }
 
-.nav-link {
-    color: white;
-}
-
-.nav-link:hover {
+.navbar-light .navbar-brand {
     color: black;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: black;
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+    color: white;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
 }
